<resources>
    <string name="app_name">Muun</string>
    <string name="verify_link_handler_label" translatable="false">Muun</string>
    <string name="authorize_link_handler_label" translatable="false">Muun</string>
    <string name="confirm_link_handler_label" translatable="false">Muun</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="yes_cancel">Yes, cancel</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss">Dismiss</string>
    <string name="stay">Stay</string>
    <string name="leave">Leave</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="retry">Retry</string>
    <string name="send_report">Send report</string>
    <string name="abort">Abort</string>
    <string name="available_balance">Balance</string>
    <string name="selected">Selected</string>
    <string name="why"><annotation link="why">Why?</annotation></string>
    <string name="no_internet">Lost internet connection</string>
    <string name="qr_code_image">QR Code Image</string>
    <string name="backspace">Backspace</string>
    <string name="long_date_format">%s at %s%s</string>
    <string name="not_available">Not available</string>
    <string name="open_app">Open app</string>
    <string name="loading">Loading...</string>
    <string name="contacting">Contacting</string>
    <string name="overflow_menu_hint">Overflow</string>
    <string name="google_play_services_not_available">
        It seems Google Play Services is not available on this mobile device. Muun needs it to send
        push notifications for Lightning payments. Please, install Google Play Services and try
        again.
    </string>
    <string name="fcm_token_not_available">
        The Android notification service is not responding. Please try again.
    </string>
    <string name="new_operation_title">New payment</string>
    <string name="operation_detail_title">Payment details</string>
    <string name="showqr_title">Receive</string>
    <string name="scanqr_title">Send</string>
    <string name="scanqr_drawer_title">Use address in clipboard</string>
    <string name="scanqr_drawer_no_address">Payment request from %s</string>
    <string name="scanqr_drawer_no_address_no_host">Payment request from a merchant</string>
    <string name="scanqr_drawer_ln_invoice_title">Use invoice in clipboard</string>
    <string name="grant_camera_permission_button">Enable camera</string>
    <string name="camera_permission_request_title">
        Scan a bitcoin or lightning QR code
    </string>
    <string name="camera_permission_request">
        Enable your camera to scan QR codes with addresses or invoices
    </string>
    <string name="new_operation_to">To</string>
    <string name="new_operation_to_hint">Enter a bitcoin address or invoice</string>
    <string name="new_operation_dialog_full_address">Full address</string>
    <string name="new_operation_note_hint">Write a note</string>
    <string name="new_operation_total">Total</string>
    <string name="new_operation_fee">Network fee</string>
    <string name="new_operation_amount">Amount</string>
    <string name="new_operation_use_all_funds">Use all funds</string>
    <string name="new_operation_note">Note</string>
    <string name="new_operation_confirm">Send</string>
    <string name="new_operation_resolving">Loading payment details</string>
    <string name="new_operation_receiving_node_data">Receiving node details</string>
    <string name="new_operation_invoice_exp_prefix">This invoice will expire in</string>
    <string name="new_operation_invoice_exp_weeks">%d weeks and %d days</string>
    <string name="new_operation_invoice_exp_days">%d days and %d hours</string>
    <string name="new_operation_invoice_exp_hours">%d hours and %d minutes</string>
    <string name="new_operation_invoice_exp_minutes">%02d:%02d</string>
    <string name="new_operation_invoice_exp_seconds">%02d:%02d</string>
    <string name="confirm_amount">confirm amount</string>
    <string name="confirm_note">confirm note</string>
    <string name="title_new_operation">Send bitcoin</string>
    <string name="new_operation_abort_alert_title">Cancel payment?</string>
    <string name="new_operation_abort_alert_body">
        Do you want to cancel this payment and go back to the home screen?
    </string>
    <string name="new_operation_swap_title">Pay via lightning</string>
    <string name="new_operation_receiving_node_public_key">
        <![CDATA[<b>Public keys:</b> %s]]>
    </string>
    <string name="new_operation_receiving_node_network_address">
        <![CDATA[<b>Network address:</b> %s]]>
    </string>
    <string name="see_in_node_explorer">Open in node explorer</string>
    <string name="new_op_1_conf_notice_banner">
        This payment may take longer than most lightning payments.
        <annotation link="link">Why?</annotation>
    </string>
    <string name="new_op_1_conf_notice_title">Why will this payment take longer?</string>
    <string name="new_op_1_conf_notice_desc">
        This lightning payment requires a confirmed on-chain transaction. It takes an average of
        10 minutes to confirm.
    </string>
    <string name="error_op_insufficient_funds">You don\’t have enough funds</string>
    <string name="error_op_insufficient_funds_desc">
            You don\’t have enough funds to cover this payment and the network fee.
    </string>
    <string name="error_op_invoice_unreachable_node_title">This invoice can\'t be paid</string>
    <string name="error_op_invoice_unreachable_node_desc">
        This invoice was created by a private node that can\'t be reached. To reach it, the invoice
        must include extra data (RouteHints). This issue can only be fixed by the invoice creator.
    </string>
    <string name="error_op_invoice_no_route_title">There is no available route</string>
    <string name="error_op_invoice_no_route_desc">
        There\'s no route with enough capacity to make this payment. Please, reach out to our
        <annotation link="support">support team</annotation> and let us know what happened. We’ll
        be happy to help.
    </string>
    <string name="error_op_invoice_will_expire_soon_title">
        This payment needs a longer expiration time
    </string>
    <string name="error_op_invoice_will_expire_soon_desc">
        Please request a new invoice with an expiration time of at least one hour,
        or try scanning an invoice with a smaller amount.
    </string>
    <string name="error_op_invoice_expired_title">This invoice has expired</string>
    <string name="error_op_invoice_expired_desc">
        This invoice expired before the payment was made. Please, create or request a new one.
    </string>
    <string name="error_op_invoice_used_title">This invoice has already been used</string>
    <string name="error_op_invoice_used_desc">
        This invoice has already been scanned or paid by another wallet. Please create or request
        a new one.
    </string>
    <string name="error_op_invoice_invalid_amount_title">
        This invoice doesn\’t include an amount
    </string>
    <string name="error_op_invoice_invalid_amount_desc">
        At the moment, you can only pay to invoices that include an amount. Please, create or
        request a new one.
    </string>
    <string name="error_op_invoice_invalid_title">Unable to pay this invoice</string>
    <string name="error_op_invoice_invalid_desc">Please try with another invoice</string>
    <string name="error_op_exchange_rate_window_too_old_title">The bitcoin rates changed</string>
    <string name="error_op_exchange_rate_window_too_old_desc">
        Your payment was not completed because bitcoin exchange rates changed since you started.
        Please start a new payment.
    </string>
    <string name="error_op_invalid_swap">An unexpected error occurred</string>
    <string name="error_op_invalid_swap_desc">
        Something went wrong, but we don’t know what. Please, reach out to our
        <annotation link="support">support team</annotation> and let us know what happened. We’ll
        be happy to help.
    </string>
    <string name="error_op_cyclical_swap_title">This invoice can\’t be paid</string>
    <string name="error_op_cyclical_swap_desc">You can’t pay an invoice to yourself.</string>
    <string name="error_op_swap_failed_title">Payment failed</string>
    <string name="operation_detail_description">Description</string>
    <string name="operation_detail_date">When</string>
    <string name="operation_detail_amount">Amount</string>
    <string name="operation_detail_confirmations">Confirmations</string>
    <string name="operation_detail_fee">Network fee</string>
    <string name="operation_detail_address_incoming">Received in address</string>
    <string name="operation_detail_txid">Transaction ID</string>
    <string name="operation_detail_invoice">Lightning invoice</string>
    <string name="operation_detail_swap_hash">Payment hash</string>
    <string name="operation_detail_swap_preimage">Payment preimage</string>
    <string name="operation_detail_receiving_pubkey">Receiving node</string>
    <string name="signup_email_verify">Verify your email</string>
    <string name="setup_password_intro_title">Back up your wallet</string>
    <string name="setup_password_intro_body">
        Use your email and a password to conveniently recover your wallet if you change your phone
        or reinstall Muun.
    </string>
    <string name="setup_password_intro_action">START</string>
    <string name="create_email_title">Enter your email</string>
    <string name="create_email_subtitle">
        You will receive a verification link.
        <annotation link="why">How will Muun use my email?</annotation>
    </string>
    <string name="create_email_input_hint">Your email</string>
    <string name="create_email_skip">I don\'t want to use my email</string>
    <string name="create_email_action">CONFIRM EMAIL</string>
    <string name="create_email_help_link">
        <annotation link="help">I need help</annotation>
    </string>
    <string name="verify_email_title">Verify your email</string>
    <string name="verify_email_subtitle">
        You will receive a verification email at
        <annotation fontStyle="bold"><annotation arg="0">%s</annotation></annotation>.
        Click the link in the email to continue.
    </string>
    <string name="verify_email_action">OPEN EMAIL APP</string>
    <string name="setup_password_success_title">Success!</string>
    <string name="setup_password_success_body">
        You backed up your wallet, and can now recover it using your email and password.
    </string>
    <string name="setup_password_success_action">EXCELLENT</string>
    <string name="recovery_code_explanation_title">Write down your Recovery Code</string>
    <string name="recovery_code_explanation">
        Use pen and paper. For security, don\'t save this on your phone or in the cloud.
    </string>
    <string name="recovery_code_continue">Continue</string>
    <string name="feedback_explanation">
        Send us any ideas, comments or problems you have. We read them all!
    </string>
    <string name="feedback_input_hint">Feedback</string>
    <string name="feedback_action">Send feedback</string>
    <string name="operation_pending">Confirming</string>
    <string name="delete_wallet_success_message">You deleted your wallet</string>
    <string name="delete_wallet_success_description">
        We\'re sorry to see you go! We would love to know why. Reach out to
        our <annotation link="support">support team</annotation> and let us know.
    </string>
    <string name="delete_wallet_success_action">FINISH</string>
    <string name="dark_mode_dark">Dark mode</string>
    <string name="dark_mode_light">Light mode</string>
    <string name="dark_mode_follow_system">Determined by the system</string>
</resources>