<?xml version="1.0" encoding="utf-8"?>
<io.meen.apollo.presentation.ui.view.MeenButtonLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <View style="@style/expander" />

        <io.meen.apollo.presentation.ui.view.MeenInfoBox
                android:id="@+id/setup_password_intro_info_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:pictureDrawable="@drawable/setup_password_intro"
                app:title="@string/setup_password_intro_title"
                app:description="@string/setup_password_intro_body" />

        <View style="@style/expander" />

    </LinearLayout>


    <io.meen.apollo.presentation.ui.view.MeenButton
            style="@style/meen_button_secondary"
            android:id="@+id/create_email_skip"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/create_email_skip"
            android:contentDescription="@string/create_email_skip"
            android:visibility="gone"
            tools:visibility="visible" />

    <io.meen.apollo.presentation.ui.view.MeenButton
            android:id="@+id/setup_password_intro_action"
            style="@style/meen_button_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setup_password_intro_action" />

</io.meen.apollo.presentation.ui.view.MeenButtonLayout>