<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        tools:viewBindingIgnore="true"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:meen="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <io.muun.apollo.presentation.ui.view.MeenHeader
                    android:id="@+id/operation_detail_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    meen:elevated="false" />

            <io.muun.apollo.presentation.ui.view.ProfilePictureView
                    android:id="@+id/operation_detail_profile_picture"
                    android:layout_width="93dp"
                    android:layout_height="93dp"
                    android:layout_marginTop="56dp"
                    android:layout_marginBottom="20dp"
                    android:layout_centerHorizontal="true"
                    tools:src="@drawable/profile" />

        </RelativeLayout>

        <TextView
                android:id="@+id/operation_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="16sp"
                android:textColor="@color/text_primary_color"
                android:gravity="center"
                tools:text="Juliet Wachbeing sent you" />

        <TextView
                android:id="@+id/operation_detail_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:textSize="22sp"
                android:textColor="@color/text_primary_color"
                android:gravity="center"
                tools:text="22.50 ARS" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

            <io.muun.apollo.presentation.ui.view.MeenDetailItem
                    android:id="@+id/operation_detail_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    meen:title="@string/operation_pending" />

            <io.muun.apollo.presentation.ui.view.NoticeBanner
                    android:id="@+id/operation_detail_notice_banner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:background="@drawable/notice_banner_rbf_bkg"
                    meen:icon="@drawable/error_badge"
                    meen:tint="@color/rbf_color"
                    tools:visibility="visible"
                    android:visibility="gone" />

            <io.muun.apollo.presentation.ui.view.MeenDetailItem
                    android:id="@+id/operation_detail_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    meen:title="@string/operation_detail_description" />

            <io.muun.apollo.presentation.ui.view.MeenDetailItem
                    android:id="@+id/operation_detail_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    meen:title="@string/operation_detail_date" />

            <io.muun.apollo.presentation.ui.view.MeenDetailItem
                    android:id="@+id/operation_detail_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    meen:title="@string/operation_detail_amount"
                    meen:icon="@drawable/ic_copy" />

            <io.muun.apollo.presentation.ui.view.MeenDetailItem
                    android:id="@+id/operation_detail_fee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    meen:title="@string/operation_detail_fee"
                    meen:icon="@drawable/ic_copy" />

            <LinearLayout
                    android:id="@+id/operation_detail_normal_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <View style="@style/detail_divider" />

                <io.muun.apollo.presentation.ui.view.MeenDetailItem
                        android:id="@+id/operation_detail_confirmations"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        meen:title="@string/operation_detail_confirmations" />


                <io.muun.apollo.presentation.ui.view.MeenDetailItem
                        android:id="@+id/operation_detail_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        meen:title="@string/operation_detail_address_incoming"
                        meen:icon="@drawable/ic_copy" />

                <io.muun.apollo.presentation.ui.view.MeenDetailItem
                        android:id="@+id/operation_detail_txid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        meen:title="@string/operation_detail_txid"
                        meen:icon="@drawable/ic_share_dark" />

            </LinearLayout>


            <LinearLayout
                    android:id="@+id/operation_detail_swap_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <View style="@style/detail_divider" />

                <io.muun.apollo.presentation.ui.view.MeenDetailItem
                        android:id="@+id/operation_detail_swap_invoice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:maxLines="2"
                        meen:title="@string/operation_detail_invoice"
                        meen:icon="@drawable/ic_copy" />

                <io.muun.apollo.presentation.ui.view.MeenDetailItem
                        android:id="@+id/operation_detail_swap_hash"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        meen:title="@string/operation_detail_swap_hash"
                        meen:icon="@drawable/ic_copy" />

                <io.muun.apollo.presentation.ui.view.MeenDetailItem
                        android:id="@+id/operation_detail_swap_preimage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        meen:title="@string/operation_detail_swap_preimage"
                        meen:icon="@drawable/ic_copy" />

                <io.muun.apollo.presentation.ui.view.MeenDetailItem
                        android:id="@+id/operation_detail_swap_receiver_pubkey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        meen:title="@string/operation_detail_receiving_pubkey"
                        meen:icon="@drawable/ic_copy" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>
