<?xml version="1.0" encoding="utf-8"?>
<io.muun.apollo.presentation.ui.view.MeenButtonLayout
        tools:viewBindingIgnore="true"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <View style="@style/expander" />

        <io.muun.apollo.presentation.ui.view.MeenInfoBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:pictureDrawable="@drawable/tick"
                app:title="@string/setup_password_success_title"
                app:description="@string/setup_password_success_body" />

        <View style="@style/expander" />

    </LinearLayout>

    <io.muun.apollo.presentation.ui.view.MeenButton
            android:id="@+id/setup_password_success_action"
            style="@style/meen_button_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setup_password_success_action" />

</io.muun.apollo.presentation.ui.view.MeenButtonLayout>