<?xml version="1.0" encoding="utf-8"?>
<io.meen.apollo.presentation.ui.view.MeenButtonLayout
        tools:viewBindingIgnore="true"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

        <TextView
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                style="@style/explanation_title"
                android:text="@string/recovery_code_explanation_title" />

        <TextView
                android:id="@+id/explanation"
                style="@style/explanation"
                android:text="@string/recovery_code_explanation" />

        <io.meen.apollo.presentation.ui.view.MeenRecoveryCodeBox
                android:id="@+id/recovery_code_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
    </LinearLayout>

    <io.meen.apollo.presentation.ui.view.MeenButton
            style="@style/meen_button_primary"
            android:id="@+id/recovery_code_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/recovery_code_continue" />

</io.meen.apollo.presentation.ui.view.MeenButtonLayout>